// ---------------------------------------------------------
// IDamagable.cs
//
// 作成日:2024/02/20
// 作成者:小林慎
// ---------------------------------------------------------

public interface IDamageable
{
   void Damage();
}